@@ -67,6 +67,9 @@ static struct ida_image* read_image(const fim_char_t *filename, FILE* fd, fim_in
 #if FIM_WANT_MIPMAPS
 static fim_err_t fim_mipmaps_compute(const struct ida_image *src, fim_mipmap_t * mmp);
 #endif /* FIM_WANT_MIPMAPS */
+#if FIM_WANT_CROP 
+static struct ida_image* crop_image(struct ida_image *src, ida_rect rect);
+#endif /* FIM_WANT_CROP */
 static struct ida_image* rotate_image90(struct ida_image *src, unsigned int rotation);
 static struct ida_image* rotate_image(struct ida_image *src, float angle);
 static struct ida_image* scale_image(const struct ida_image *src, float scale, float ascale
